Fixed subscribe button layout issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,7 @@
 	display: table;
 }
 
+
 #signup-form > .message {
   margin: 0;
 }
@@ -40,8 +41,8 @@
 #signup-form > button,
 #mc_embed_signup .button {
   font-size: 16px;
-  height: 44px;
-  width: 140px;
+  /*height: 44px;
+  width: 140px;*/
 }
 
 #signupdiv .rush-button {
